--- a/web/styles.css
+++ b/web/styles.css
@@ -1,17 +1,32 @@
 h1 {
   color: red;
+  font-family: monospace;
+  font-size: 5rem;
 }
 
 body {
   height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-#tube-room-container {
+.room-container {
   height: 50%;
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    flex-direction: row-reverse;
+  }
+  .room-container {
+    height: 100%;
+    width: 50%;
+  }
 }
 
 #matrix-room-container {
-  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
