--- a/web/styles.css
+++ b/web/styles.css
@@ -1,12 +1,23 @@
 h1 {
-  color: red;
+  color: black;
+  background-color: rgba(0, 0, 0, 0.2);
   font-family: monospace;
-  font-size: 5rem;
+  font-size: 3rem;
+  margin: 0;
+}
+
+.message-container {
+  padding: 10px 5px;
+}
+
+.name {
+  opacity: 0.7;
 }
 
 p {
   font-family: monospace;
-  font-size: 3rem;
+  font-size: 2rem;
+  margin: 0px;
 }
 
 body {
@@ -14,6 +25,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 
 .room-container {
@@ -21,12 +33,7 @@ body {
   width: 100%;
 }
 
-.room-events-container {
-  height: 90%;
-  overflow-y: scroll;
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 1000px) {
   body {
     flex-direction: row-reverse;
   }
@@ -36,28 +43,37 @@ body {
   }
 }
 
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
-  }
+.room-events-container {
+  flex-grow: 1;
+  overflow-y: scroll;
+}
+
+#tube-room-container {
+  background-color: lightgrey;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 #matrix-room-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 2;
+  background-color: wheat;
 }
 
 #new-message-container {
   display: flex;
+  width: 100%;
 }
 
 input {
-  font-size: 5rem;
-  width: 90%;
+  font-size: 2rem;
+  flex-grow: 1;
 }
 
 #send-button {
-  font-size: 5rem;
-  width: 10%;
+  font-size: 2rem;
+  font-family: monospace;
 }
