--- a/web/styles/app.css
+++ b/web/styles/app.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 1.25vh;
+}
+
 body {
   margin: 0;
 }
@@ -28,6 +32,14 @@ h1 {
   background-color: rgba(0, 0, 0, 0.2);
   font-family: monospace;
   font-size: 3rem;
+  margin: 0;
+}
+
+h2 {
+  color: black;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-family: monospace;
+  font-size: 2.5rem;
   margin: 0;
 }
 
