--- a/web/styles/app.css
+++ b/web/styles/app.css
@@ -95,6 +95,11 @@ h3 {
 
 .room-title {
   font-size: 3rem;
+}
+
+#matrix-room-title-container {
+  display: flex;
+  justify-content: space-between;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -110,6 +115,10 @@ h3 {
 
 #tube-room-container .message-container {
   color: white;
+}
+
+#tube-room-title {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .name {
