--- a/web/styles/app.css
+++ b/web/styles/app.css
@@ -13,6 +13,14 @@ body {
   color: white;
 }
 
+a {
+  color: white;
+}
+
+a:visited {
+  color: #8b8b8b;
+}
+
 #app {
   height: 100vh;
 }
@@ -24,14 +32,21 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   text-align: center;
+}
+
+#actions-container {
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (min-width: 600px) {
   #home-container {
     width: 70%;
     margin-left: 15%;
+  }
+  #actions-container {
+    flex-direction: row;
   }
 }
 
