--- a/web/styles/app.css
+++ b/web/styles/app.css
@@ -53,9 +53,11 @@ a:visited {
 @media only screen and (min-width: 800px) {
   #actions-container {
     flex-direction: row;
+    justify-content: center;
   }
   .form-container {
     min-width: 50%;
+    max-width: 75%;
   }
 }
 
